tests/snapshots/snapshots__interpreter@show.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/show.pr
---
abc
42true
1
0
5
=> ()
