tests/snapshots/snapshots__interpreter@show_mangle_clash.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/show_mangle_clash.pr
---
F(B)
G
=> ()
