tests/snapshots/snapshots__interpreter@sort_demo.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/sort_demo.pr
---
1
2
4
5
8
=> ()
