tests/snapshots/snapshots__interpreter@stable_ladder.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/stable_ladder.pr
---
stable roundtrip: OK
stable ladder adjacent: OK
stable frame roundtrip: OK
stable ladder unknown digest: OK
stable ladder old frame defaults: OK
stable ladder empty body: OK
=> ()
