tests/snapshots/snapshots__interpreter@streams_edge.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/streams_edge.pr
---
0
0
6
=> ()
