tests/snapshots/snapshots__interpreter@string_edges.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/string_edges.pr
---

lo
hél

233
-1
-1
None
None
Some(42)
Some(-7)
None
Some(99999999999999999999)
=> ()
