tests/snapshots/snapshots__interpreter@strings_lib.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/strings_lib.pr
---
3
49
3
1025
=> ()
